fix z-index of inputs

--- a/app/form/form.scss
+++ b/app/form/form.scss
@@ -64,7 +64,7 @@ md-datepicker-container {
 
 md-input-container .md-input {
   position: relative;
-  z-index: 10;
+  z-index: 4;
 }
 
 // forms
